<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_connectDetails"
        android:layout_width="396dp"
        android:layout_height="96dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="3dp"
        android:text="@string/button_connectDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_mainmenu"
        android:layout_width="396dp"
        android:layout_height="96dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="99dp"
        android:onClick="button_mainmenu"
        android:text="@string/button_mainmenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_connectDetails" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="172dp"
        android:layout_height="39dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="1dp"
        android:text="@string/switch_car"
        app:layout_constraintBottom_toTopOf="@+id/switch2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="172dp"
        android:layout_height="39dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="261dp"
        android:text="@string/switch_drone"
        app:layout_constraintBottom_toTopOf="@+id/button_connectDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1" />
</android.support.constraint.ConstraintLayout>