<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <Button
        android:id="@+id/button_credits"
        android:layout_width="396dp"
        android:layout_height="96dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:onClick="button_credits"
        android:text="@string/button_credits"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_ar" />

    <Button
        android:id="@+id/button_ar"
        android:layout_width="396dp"
        android:layout_height="96dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:onClick="button_ar"
        android:text="@string/button_ar"
        app:layout_constraintBottom_toTopOf="@+id/button_credits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_car" />

    <Button
        android:id="@+id/button_car"
        android:layout_width="396dp"
        android:layout_height="96dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:onClick="button_car"
        android:text="@string/button_car"
        app:layout_constraintBottom_toTopOf="@+id/button_ar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_drone" />

    <Button
        android:id="@+id/button_connect"
        android:layout_width="396dp"
        android:layout_height="96dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="195dp"
        android:layout_marginEnd="10dp"
        android:onClick="button_connect"
        android:text="@string/button_connect"
        app:layout_constraintBottom_toTopOf="@+id/button_drone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_drone"
        android:layout_width="396dp"
        android:layout_height="96dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:onClick="button_drone"
        android:text="@string/button_drone"
        app:layout_constraintBottom_toTopOf="@+id/button_car"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_connect" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="257dp"
        android:layout_height="76dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="84dp"
        android:text="@string/app_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_connect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>